Show new version lines in performance graph
